Add semi colon missing

--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,7 @@ h1 {
   text-transform: uppercase;
   }
 figcaption {
-  font-size: 0.8rem
+  font-size: 0.8rem;
   font-style: italic;
   text-align: center;
-
-
 }
